Technician profile complete
users can now view technicians profile, see their portfolio as well as other users reviews on them

--- a/Client/src/app/components/technician/technician-card/technician-card.html
+++ b/Client/src/app/components/technician/technician-card/technician-card.html
@@ -11,7 +11,7 @@
         </div>
         <div class="provider-basic-info">
           <h3 class="provider-name">{{ craftsman.fullName }}</h3>
-          <p class="provider-profession">{{ craftsman.fullName }}</p>
+          <p class="provider-profession">{{ craftsman.jobTitle || craftsman.craftName || 'Technician' }}</p>
         </div>
       </div>
 
