Create the Admin layout structure and add an Admin navigation menu.

--- a/Client/src/app/layouts/blank-layout/blank-layout.html
+++ b/Client/src/app/layouts/blank-layout/blank-layout.html
@@ -2,6 +2,8 @@
   <app-technician-nav-bar></app-technician-nav-bar>
 } @else if (showCustomerNavBar) {
   <app-customer-nav-bar></app-customer-nav-bar>
+}@else if (showAdminNavBar) {
+  <app-admin-nav-bar></app-admin-nav-bar>
 } @else {
   <app-nav-blank></app-nav-blank>
 }
