--- a/Client/src/app/layouts/admin-layout/admin-layout.html
+++ b/Client/src/app/layouts/admin-layout/admin-layout.html
@@ -1,1 +1,5 @@
-<p>admin-layout works!</p>
+<app-admin-nav-bar></app-admin-nav-bar>
+<div class="">
+  <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
