Fix offers error + update the forms of serviceRequest
change the servuceRequest from customer side so they choose range of dates for their request
change the offerRequest so the technician can choose preferred date and time
Fix the errors that appears when there is no offers on a serviceRequest

--- a/Client/src/app/pages/customer/service-request-details/service-request-details.html
+++ b/Client/src/app/pages/customer/service-request-details/service-request-details.html
@@ -170,7 +170,7 @@
             <ul class="offer-meta">
               <li>
                 <i class="bi bi-calendar2-week"></i>
-                {{ 'ServiceRequestDetails.Offers.Availability' | translate:{ from: formatDate(offer.availableFromDate), to: formatDate(offer.availableToDate) } }}
+                {{ 'ServiceRequestDetails.Offers.Availability' | translate:{ Day: formatDate(offer.preferredDate), Time: (offer.preferredTimeSlot) } }}
               </li>
               <li>
                 <i class="bi bi-clock"></i>
